add function to pull chain

--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
   <title>NEON SIGN</title>
 </head>
 <body>
+  <img src="pullchain.png" alt="lightswitch">
   <h1 class="neon-sign">Neon Sign</h1>
+  <div class="overlay">
+    <button  class="btn" type="button" name="button"></button>
+    <!-- <label class="btn-label" for="on">0</label> -->
+    <h1 class="off-sign">Neon Sign</h1>
+  </div>
+
+
+  <script src="index.js" charset="utf-8"></script>
 </body>
 </html>
