on and off light switch

--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
   <title>NEON SIGN</title>
 </head>
 <body>
+  <button class="btn0" type="button"></button>
   <img src="pullchain.png" alt="lightswitch">
   <h1 class="neon-sign">Neon Sign</h1>
   <div class="overlay">
-    <button  class="btn" type="button" name="button"></button>
+    <button  class="btn" type="button"></button>
     <!-- <label class="btn-label" for="on">0</label> -->
     <h1 class="off-sign">Neon Sign</h1>
   </div>
