add we are open text

--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
 <body>
   <button class="btn0" type="button"></button>
   <img src="pullchain.png" alt="lightswitch">
-  <h1 class="neon-sign">Neon Sign</h1>
+  <h1 class="neon-sign">We're Open</h1>
+
+  <!-- using this div at an overlay for on-off action -->
   <div class="overlay">
     <button  class="btn" type="button"></button>
     <!-- <label class="btn-label" for="on">0</label> -->
-    <h1 class="off-sign">Neon Sign</h1>
+    <h1 class="off-sign">We're Open</h1>
   </div>
 
 
