added the life sign

--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
 <body>
   <button class="btn0" type="button"></button>
   <img src="pullchain.png" alt="lightswitch">
-  <h1 class="neon-sign">We're Open</h1>
+  <h2 class="life-sign">Life</h2>
+  <h1 class="neon-sign">ON UBER ONLY</h1>
 
   <!-- using this div at an overlay for on-off action -->
   <div class="overlay">
     <button  class="btn" type="button"></button>
     <!-- <label class="btn-label" for="on">0</label> -->
-    <h1 class="off-sign">We're Open</h1>
+    <h1 class="off-sign">ON UBER ONLY</h1>
   </div>
 
 
