--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
   <button class="btn0" type="button"></button>
   <img src="pullchain.png" alt="lightswitch">
   <h2 class="life-sign">Life</h2>
-  <h1 class="neon-sign">ON UBER ONLY</h1>
+  <h1 class="neon-sign">on uber...ONLY!</h1>
 
   <!-- using this div at an overlay for on-off action -->
   <div class="overlay">
     <button  class="btn" type="button"></button>
     <!-- <label class="btn-label" for="on">0</label> -->
-    <h1 class="off-sign">ON UBER ONLY</h1>
+    <h1 class="off-sign">on uber...ONLY!</h1>
   </div>
 
 
